Finished /shopping endpoint implementation, user TODO, swagger update
