# backend-fltshr/src/main/java/com/zychp/backendfltshr/domain/shopping/ShoppingEntryDTO.java
@@ -6,15 +6,15 @@ import lombok.Data;
 import java.sql.Timestamp;
 
 @Data
-public class ShoppingDTO {
+public class ShoppingEntryDTO {
    private Long id;
    private ShoppingItemDTO shoppingItem;
    private UserNameDTO user;
    private Boolean isBought;
    private Timestamp boughtDate;
 
-    public static ShoppingDTO valueOf(Shopping entity) {
-        ShoppingDTO dto = new ShoppingDTO();
+    public static ShoppingEntryDTO valueOf(ShoppingEntry entity) {
+        ShoppingEntryDTO dto = new ShoppingEntryDTO();
         dto.setId(entity.getId());
         dto.setShoppingItem(ShoppingItemDTO.valueOf(entity.getShoppingItem()));
         dto.setUser(UserNameDTO.valueOf(entity.getUser()));
